--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,9 @@ python_files = tests/**.py
 [flake8]
 ignore = E741, W503, E501, E203
 max-line-length = 88
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+line_length=88
