--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,41 @@
--e .
-
+alabaster==0.7.12
+appdirs==1.4.4
+attrs==19.3.0
+babel==2.8.0
+black==19.10b0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3; sys_platform == "win32"
+docutils==0.16
+flake8==3.8.2
+idna==2.9
+imagesize==1.2.0
+importlib-metadata==1.6.0; python_version < "3.8"
+jinja2==2.11.2
+markupsafe==1.1.1
+mccabe==0.6.1
+packaging==20.4
+pathspec==0.8.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pygments==2.6.1
+pyparsing==2.4.7
+pytz==2020.1
+regex==2020.5.14
+requests==2.23.0
+rstcheck==3.3.1
+six==1.15.0
+snowballstemmer==2.0.0
+sphinx==3.0.4
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+toml==0.10.1
+typed-ast==1.4.1
+urllib3==1.25.9
+zipp==3.1.0; python_version < "3.8"
