--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ rstcheck = "^3.3.1"
 flake8 = "^3.8.2"
 black = "^19.10b0"
 sphinx_rtd_theme = "^0.4.3"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
