--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ flake8 = "^3.8.2"
 black = "^19.10b0"
 sphinx_rtd_theme = "^0.4.3"
 jupyter = "^1.0.0"
+nbsphinx = "^0.8.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
