--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ black = "^19.10b0"
 sphinx_rtd_theme = "^0.4.3"
 jupyter = "^1.0.0"
 nbsphinx = "^0.8.6"
+matplotlib = "^3.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
