--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,96 @@
-alabaster==0.7.12; python_version >= "3.5"
-appdirs==1.4.4; python_version >= "3.6"
-appnope==0.1.2; platform_system == "Darwin" and python_version >= "3.7" and sys_platform == "darwin"
-argcomplete==1.12.3; python_version < "3.8.0" and python_version >= "3.7"
-argon2-cffi==21.1.0; python_version >= "3.6"
-attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-babel==2.9.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
-backcall==0.2.0; python_version >= "3.7"
-black==19.10b0; python_version >= "3.6"
-bleach==4.1.0; python_version >= "3.7"
-certifi==2021.5.30; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-cffi==1.14.6; implementation_name == "pypy" and python_version >= "3.6"
-charset-normalizer==2.0.6; python_full_version >= "3.6.0" and python_version >= "3.5"
-click==8.0.1; python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0" and platform_system == "Windows"
-cycler==0.10.0; python_version >= "3.7"
-cython==0.29.24; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-debugpy==1.4.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-decorator==5.1.0; python_version >= "3.7"
-defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-desdeo-emo==1.3.2; python_full_version >= "3.7.0" and python_version < "3.10"
-desdeo-mcdm==1.2.10; python_full_version >= "3.7.0" and python_version < "3.10"
-desdeo-problem==1.3.2; python_version >= "3.7" and python_version < "3.10"
-desdeo-tools==1.5.4; python_version >= "3.7" and python_version < "3.10"
-diversipy==0.8; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-docutils==0.16; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-entrypoints==0.3; python_full_version >= "3.6.1" and python_version >= "3.7"
-flake8==3.9.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-hvwfg==1.0.2; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-imagesize==1.2.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
-importlib-metadata==4.8.1; python_version == "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version == "3.7"
-ipykernel==6.4.1; python_version >= "3.7"
-ipython-genutils==0.2.0; python_version >= "3.7"
-ipython==7.28.0; python_version >= "3.7"
-ipywidgets==7.6.5
-jedi==0.18.0; python_version >= "3.7"
-jinja2==3.0.1; python_version >= "3.7"
-joblib==1.0.1; python_version >= "3.7" and python_version < "3.10"
-jsonschema==3.2.0; python_version >= "3.6"
-jupyter-client==7.0.4; python_full_version >= "3.6.1" and python_version >= "3.7"
-jupyter-console==6.4.0; python_version >= "3.6"
-jupyter-core==4.8.1; python_full_version >= "3.6.1" and python_version >= "3.7"
-jupyter==1.0.0
-jupyterlab-pygments==0.1.2; python_version >= "3.7"
-jupyterlab-widgets==1.0.2; python_version >= "3.6"
-kiwisolver==1.3.2; python_version >= "3.7"
-llvmlite==0.36.0; python_version >= "3.7" and python_version < "3.10"
-markupsafe==2.0.1; python_version >= "3.6"
-matplotlib-inline==0.1.3; python_version >= "3.7"
-matplotlib==3.4.3; python_version >= "3.7"
-mccabe==0.6.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-mistune==0.8.4; python_version >= "3.7"
-nbclient==0.5.4; python_full_version >= "3.6.1" and python_version >= "3.7"
-nbconvert==6.2.0; python_version >= "3.7"
-nbformat==5.1.3; python_full_version >= "3.6.1" and python_version >= "3.7"
-nbsphinx==0.8.7; python_version >= "3.6"
-nest-asyncio==1.5.1; python_full_version >= "3.6.1" and python_version >= "3.7"
-notebook==6.4.4; python_version >= "3.6"
-numba==0.53.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-numpy==1.21.2; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-optproblems==1.3; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-packaging==21.0; python_version >= "3.7"
-pandas==1.1.5; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-pandocfilters==1.5.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-parso==0.8.2; python_version >= "3.7"
-pathspec==0.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.7"
-pickleshare==0.7.5; python_version >= "3.7"
-pillow==8.3.2; python_version >= "3.7"
-plotly==4.14.3; python_full_version >= "3.7.0" and python_version < "3.10"
-prometheus-client==0.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-prompt-toolkit==3.0.20; python_full_version >= "3.6.2" and python_version >= "3.7"
-ptyprocess==0.7.0; os_name != "nt" and python_version >= "3.7" and sys_platform != "win32"
-py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
-pycodestyle==2.7.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pydoe==0.3.8; python_full_version >= "3.7.0" and python_version < "3.10"
-pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pygments==2.10.0; python_version >= "3.7"
-pyparsing==2.4.7; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-pyrsistent==0.18.0; python_version >= "3.6"
-python-dateutil==2.8.2; python_full_version >= "3.6.1" and python_version >= "3.7" and python_version < "3.10"
-pytz==2021.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.1" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5")
-pywin32==301; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
-pywinpty==1.1.4; os_name == "nt" and python_version >= "3.6"
-pyzmq==22.3.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-qtconsole==5.1.1; python_version >= "3.6"
-qtpy==1.11.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-regex==2021.9.24; python_version >= "3.6"
-requests==2.26.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-retrying==1.3.3; python_full_version >= "3.7.0" and python_version < "3.10"
-rstcheck==3.3.1
-scikit-learn==1.0; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-scipy==1.7.1; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.7.0"
-send2trash==1.8.0; python_version >= "3.6"
-six==1.16.0; python_full_version >= "3.7.0" and python_version < "3.10" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
-snowballstemmer==2.1.0; python_version >= "3.5"
-sphinx-rtd-theme==0.4.3
-sphinx==3.5.4; python_version >= "3.5"
-sphinxcontrib-applehelp==1.0.2; python_version >= "3.5"
-sphinxcontrib-devhelp==1.0.2; python_version >= "3.5"
-sphinxcontrib-htmlhelp==2.0.0; python_version >= "3.6"
-sphinxcontrib-jsmath==1.0.1; python_version >= "3.5"
-sphinxcontrib-qthelp==1.0.3; python_version >= "3.5"
-sphinxcontrib-serializinghtml==1.1.5; python_version >= "3.5"
-terminado==0.12.1; python_version >= "3.6"
-testpath==0.5.0; python_version >= "3.7"
-threadpoolctl==2.2.0; python_version >= "3.7" and python_version < "3.10"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-tornado==6.1; python_full_version >= "3.6.1" and python_version >= "3.7"
-traitlets==5.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-typed-ast==1.4.3; python_version >= "3.6"
-typing-extensions==3.10.0.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.6"
-urllib3==1.26.7; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.5"
-wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
-webencodings==0.5.1; python_version >= "3.7"
-widgetsnbextension==3.5.1
-zipp==3.5.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.6"
+alabaster==0.7.13 ; python_version >= "3.9" and python_version < "3.11"
+appdirs==1.4.4 ; python_version >= "3.9" and python_version < "3.11"
+attrs==22.2.0 ; python_version >= "3.9" and python_version < "3.11"
+babel==2.12.1 ; python_version >= "3.9" and python_version < "3.11"
+beautifulsoup4==4.11.2 ; python_version >= "3.9" and python_version < "3.11"
+black==19.10b0 ; python_version >= "3.9" and python_version < "3.11"
+bleach==6.0.0 ; python_version >= "3.9" and python_version < "3.11"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "3.11"
+cffi==1.15.1 ; python_version >= "3.9" and python_version < "3.11" and implementation_name == "pypy"
+charset-normalizer==3.0.1 ; python_version >= "3.9" and python_version < "3.11"
+click==8.1.3 ; python_version >= "3.9" and python_version < "3.11"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.11" and sys_platform == "win32" or python_version >= "3.9" and python_version < "3.11" and platform_system == "Windows"
+contourpy==1.0.7 ; python_version >= "3.9" and python_version < "3.11"
+cycler==0.11.0 ; python_version >= "3.9" and python_version < "3.11"
+defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "3.11"
+descartes==1.1.0 ; python_version >= "3.9" and python_version < "3.11"
+desdeo-emo==1.5.0 ; python_version >= "3.9" and python_version < "3.11"
+desdeo-mcdm==1.3.0 ; python_version >= "3.9" and python_version < "3.11"
+desdeo-problem==1.5.0 ; python_version >= "3.9" and python_version < "3.11"
+desdeo-tools==1.8.0 ; python_version >= "3.9" and python_version < "3.11"
+diversipy==0.8 ; python_version >= "3.9" and python_version < "3.11"
+docutils==0.18.1 ; python_version >= "3.9" and python_version < "3.11"
+fastjsonschema==2.16.3 ; python_version >= "3.9" and python_version < "3.11"
+flake8==3.9.2 ; python_version >= "3.9" and python_version < "3.11"
+fonttools==4.38.0 ; python_version >= "3.9" and python_version < "3.11"
+hvwfg==1.0.2 ; python_version >= "3.9" and python_version < "3.11"
+idna==3.4 ; python_version >= "3.9" and python_version < "3.11"
+imagesize==1.4.1 ; python_version >= "3.9" and python_version < "3.11"
+importlib-metadata==6.0.0 ; python_version >= "3.9" and python_version < "3.10"
+importlib-resources==5.12.0 ; python_version >= "3.9" and python_version < "3.10"
+jinja2==3.1.2 ; python_version >= "3.9" and python_version < "3.11"
+joblib==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
+jsonschema==4.17.3 ; python_version >= "3.9" and python_version < "3.11"
+jupyter-client==8.0.3 ; python_version >= "3.9" and python_version < "3.11"
+jupyter-core==5.2.0 ; python_version >= "3.9" and python_version < "3.11"
+jupyterlab-pygments==0.2.2 ; python_version >= "3.9" and python_version < "3.11"
+kiwisolver==1.4.4 ; python_version >= "3.9" and python_version < "3.11"
+llvmlite==0.39.1 ; python_version >= "3.9" and python_version < "3.11"
+markupsafe==2.1.2 ; python_version >= "3.9" and python_version < "3.11"
+matplotlib==3.7.0 ; python_version >= "3.9" and python_version < "3.11"
+mccabe==0.6.1 ; python_version >= "3.9" and python_version < "3.11"
+mistune==2.0.5 ; python_version >= "3.9" and python_version < "3.11"
+nbclient==0.7.2 ; python_version >= "3.9" and python_version < "3.11"
+nbconvert==7.2.9 ; python_version >= "3.9" and python_version < "3.11"
+nbformat==5.7.3 ; python_version >= "3.9" and python_version < "3.11"
+nbsphinx==0.8.12 ; python_version >= "3.9" and python_version < "3.11"
+numba==0.56.4 ; python_version >= "3.9" and python_version < "3.11"
+numpy==1.23.5 ; python_version >= "3.9" and python_version < "3.11"
+optproblems==1.3 ; python_version >= "3.9" and python_version < "3.11"
+packaging==23.0 ; python_version >= "3.9" and python_version < "3.11"
+pandas==1.5.3 ; python_version >= "3.9" and python_version < "3.11"
+pandocfilters==1.5.0 ; python_version >= "3.9" and python_version < "3.11"
+pathspec==0.11.0 ; python_version >= "3.9" and python_version < "3.11"
+pillow==9.4.0 ; python_version >= "3.9" and python_version < "3.11"
+platformdirs==3.0.0 ; python_version >= "3.9" and python_version < "3.11"
+plotly==5.13.1 ; python_version >= "3.9" and python_version < "3.11"
+pycodestyle==2.7.0 ; python_version >= "3.9" and python_version < "3.11"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "3.11" and implementation_name == "pypy"
+pydoe==0.3.8 ; python_version >= "3.9" and python_version < "3.11"
+pyflakes==2.3.1 ; python_version >= "3.9" and python_version < "3.11"
+pygments==2.14.0 ; python_version >= "3.9" and python_version < "3.11"
+pyparsing==3.0.9 ; python_version >= "3.9" and python_version < "3.11"
+pyrsistent==0.19.3 ; python_version >= "3.9" and python_version < "3.11"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.11"
+pytz==2022.7.1 ; python_version >= "3.9" and python_version < "3.11"
+pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "3.11"
+pyzmq==25.0.0 ; python_version >= "3.9" and python_version < "3.11"
+regex==2022.10.31 ; python_version >= "3.9" and python_version < "3.11"
+requests==2.28.2 ; python_version >= "3.9" and python_version < "3.11"
+rstcheck==3.5.0 ; python_version >= "3.9" and python_version < "3.11"
+scikit-learn==1.2.1 ; python_version >= "3.9" and python_version < "3.11"
+scipy==1.10.1 ; python_version >= "3.9" and python_version < "3.11"
+setuptools==67.4.0 ; python_version >= "3.9" and python_version < "3.11"
+shapely==1.8.5.post1 ; python_version >= "3.9" and python_version < "3.11"
+six==1.16.0 ; python_version >= "3.9" and python_version < "3.11"
+snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.11"
+soupsieve==2.4 ; python_version >= "3.9" and python_version < "3.11"
+sphinx-rtd-theme==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
+sphinx==6.1.3 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-applehelp==1.0.4 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-devhelp==1.0.2 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-htmlhelp==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-jquery==2.0.0 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-qthelp==1.0.3 ; python_version >= "3.9" and python_version < "3.11"
+sphinxcontrib-serializinghtml==1.1.5 ; python_version >= "3.9" and python_version < "3.11"
+tenacity==8.2.2 ; python_version >= "3.9" and python_version < "3.11"
+threadpoolctl==3.1.0 ; python_version >= "3.9" and python_version < "3.11"
+tinycss2==1.2.1 ; python_version >= "3.9" and python_version < "3.11"
+toml==0.10.2 ; python_version >= "3.9" and python_version < "3.11"
+tornado==6.2 ; python_version >= "3.9" and python_version < "3.11"
+traitlets==5.9.0 ; python_version >= "3.9" and python_version < "3.11"
+typed-ast==1.5.4 ; python_version >= "3.9" and python_version < "3.11"
+urllib3==1.26.14 ; python_version >= "3.9" and python_version < "3.11"
+webencodings==0.5.1 ; python_version >= "3.9" and python_version < "3.11"
+zipp==3.15.0 ; python_version >= "3.9" and python_version < "3.10"
