--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,84 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 numpy = "^1.26.2"
 scipy = "^1.11.4"
-polars-lts-cpu = "^0.19.19"
+polars = { version = "^0.19.19", optional = true }
+polars-lts-cpu = { version = "^0.19.19", optional = true }
 
+[tool.poetry.extras]
+standard = ["polars"]
+legacy = ["polars-lts-cpu"]
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
 pytest = "^7.4.3"
-black = "^23.11.0"
 mkdocs = "^1.5.3"
+
+
+[tool.ruff]
+# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+select = [
+    "E",
+    "F",
+    "W",
+    "C901",
+    #"D",
+    "UP",
+    "S",
+    "B",
+    "A",
+    "C4",
+    "T20",
+    "PIE",
+    #"FIX",
+    "SIM",
+    #"TD",
+    "NPY",
+    "RUF",
+]
+ignore = []
+
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = []
+unfixable = []
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+per-file-ignores = {}
+
+line-length = 120
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# Assume Python 3.11.
+target-version = "py312"
 
 [build-system]
 requires = ["poetry-core"]
