--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "desdeo"
-version = "0.1.0"
+version = "2.0.0"
 description = "DESDEO is a modular and open source framework for interactive multiobjective optimization."
-authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
+authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>", "Bhupinder Saini <bhupinder.s.saini@jyu.fi>"]
 license = "MIT"
 readme = "README.md"
 
@@ -12,10 +12,15 @@ numpy = "^1.26.2"
 scipy = "^1.11.4"
 polars = { version = "^0.19.19", optional = true }
 polars-lts-cpu = { version = "^0.19.19", optional = true }
+jupyterlab = "^4.0.9"  # Should this be a dev dependency? As long as we don't publish to PyPI, I guess it's fine.
+seaborn = "^0.13.0"
+plotly = "^5.18.0"
+pydantic = "^2.5.2"
 
 [tool.poetry.extras]
 standard = ["polars"]
 legacy = ["polars-lts-cpu"]
+viz = ["seaborn", "plotly"]  # We could make viz packages optional in the future.
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
