--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,19 +37,29 @@ select = [
     "F",
     "W",
     "C901",
-    #"D",
+    "D",
     "UP",
     "S",
+    "FBT",
     "B",
     "A",
+    "COM",
     "C4",
     "T20",
     "PIE",
-    #"FIX",
+    "RET",
+    "PTH",
+    "TD",  # Comment this out if too annoying
+    "FIX",  # Comment this out if too annoying
     "SIM",
-    #"TD",
+    "PL",
+    "TRY",
+    "FURB",
+    "LOG",
     "NPY",
     "RUF",
+    "I",
+    "N",
 ]
 ignore = []
 
@@ -85,11 +95,17 @@ per-file-ignores = {}
 
 line-length = 120
 
+
+
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.11.
 target-version = "py312"
+
+[tool.ruff.format]
+quote-style = "double"
+
 
 [build-system]
 requires = ["poetry-core"]
