--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ erdantic = "^0.6.0"
 python-markdown-math = "^0.8"
 mkdocs-macros-plugin = "^1.0.5"
 djlint = "^1.34.1"
+pyparsing = {extras = ["diagrams"], version = "^3.1.1"}
 
 
 [tool.ruff]
