--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ python-markdown-math = "^0.8"
 mkdocs-macros-plugin = "^1.0.5"
 djlint = "^1.34.1"
 pyparsing = {extras = ["diagrams"], version = "^3.1.1"}
+isort = "^5.13.2"
 
 
 [tool.ruff]
@@ -110,7 +111,7 @@ line-length = 120
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.11.
+# Assume Python 3.12.
 target-version = "py312"
 
 [tool.ruff.per-file-ignores]
@@ -128,6 +129,8 @@ quote-style = "double"
 [tool.djlint]
 profile="jinja"
 
+[tools.isort]
+progile="black"
 
 [build-system]
 requires = ["poetry-core"]
