--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,16 @@ jupyterlab = "^4.0.9"  # Should this be a dev dependency? As long as we don't pu
 seaborn = "^0.13.0"
 plotly = "^5.18.0"
 pydantic = "^2.5.2"
+fastapi = "^0.106.0"
+uvicorn = {extras = ["standard"], version = "^0.25.0"}
+sqlalchemy = "^2.0.23"
+passlib = "^1.7.4"
 
 [tool.poetry.extras]
 standard = ["polars"]
 legacy = ["polars-lts-cpu"]
 viz = ["seaborn", "plotly"]  # We could make viz packages optional in the future.
+api = ["fastapi", "uvicorn", "sqlalchemy", "passlib"]  # We could make API packages optional in the future.
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
@@ -94,8 +99,6 @@ exclude = [
 per-file-ignores = {}
 
 line-length = 120
-
-
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
