--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,11 @@ profile="jinja"
 [tool.isort]
 profile="black"
 
+[tool.pytest.ini_options]
+markers = [
+    "slow: mark test as slow",
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
