--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 name = "desdeo"
 version = "2.0.0"
 description = "DESDEO is a modular and open source framework for interactive multiobjective optimization."
-authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>", "Bhupinder Saini <bhupinder.s.saini@jyu.fi>"]
+authors = [
+    "Giovanni Misitano <giovanni.a.misitano@jyu.fi>",
+    "Bhupinder Saini <bhupinder.s.saini@jyu.fi>",
+]
 license = "MIT"
 readme = "README.md"
 
@@ -12,23 +15,38 @@ numpy = "^1.26.2"
 scipy = "^1.11.4"
 polars = { version = "^0.19.19", optional = true }
 polars-lts-cpu = { version = "^0.19.19", optional = true }
-jupyterlab = "^4.0.9"  # Should this be a dev dependency? As long as we don't publish to PyPI, I guess it's fine.
+jupyterlab = "^4.0.9"                                           # Should this be a dev dependency? As long as we don't publish to PyPI, I guess it's fine.
 seaborn = "^0.13.0"
 plotly = "^5.18.0"
 pydantic = "^2.5.2"
 sympy = "^1.12"
 pyparsing = "^3.1.1"
 fastapi = "^0.106.0"
-uvicorn = {extras = ["standard"], version = "^0.25.0"}
+uvicorn = { extras = ["standard"], version = "^0.25.0" }
 sqlalchemy = "^2.0.23"
 passlib = "^1.7.4"
 numba = "^0.59.0"
+psycopg2-binary = "^2.9.9"
+sqlalchemy-utils = "^0.41.1"
+python-multipart = "^0.0.9"
+python-jose = { extras = ["cryptography"], version = "^3.3.0" }
+bcrypt = "^4.1.2"
 
 [tool.poetry.extras]
 standard = ["polars"]
 legacy = ["polars-lts-cpu"]
-viz = ["seaborn", "plotly"]  # We could make viz packages optional in the future.
-api = ["fastapi", "uvicorn", "sqlalchemy", "passlib"]  # We could make API packages optional in the future.
+viz = ["seaborn", "plotly"] # We could make viz packages optional in the future.
+api = [
+    "fastapi",
+    "uvicorn",
+    "sqlalchemy",
+    "passlib",
+    "psycopg2-binary",
+    "sqlalchemy-utils",
+    "python-multipart",
+    "python-jose",
+    "bcrypt",
+] # We could make API packages optional in the future.
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
@@ -38,8 +56,9 @@ erdantic = "^0.6.0"
 python-markdown-math = "^0.8"
 mkdocs-macros-plugin = "^1.0.5"
 djlint = "^1.34.1"
-pyparsing = {extras = ["diagrams"], version = "^3.1.1"}
+pyparsing = { extras = ["diagrams"], version = "^3.1.1" }
 isort = "^5.13.2"
+mypy = "^1.8.0"
 
 
 [tool.ruff]
@@ -63,7 +82,7 @@ select = [
     "PIE",
     "RET",
     "PTH",
-    "TD",  # Comment this out if too annoying
+    "TD",   # Comment this out if too annoying
     "FIX",  # Comment this out if too annoying
     "SIM",
     "PL",
@@ -76,10 +95,10 @@ select = [
     "N",
 ]
 ignore = [
-	"COM812", # Enforcing trailing commas is too annoying.
-	"PLR0915", # "too many statements (>50)"
-	"T201", # allow print statements
-]  
+    "COM812",  # Enforcing trailing commas is too annoying.
+    "PLR0915", # "too many statements (>50)"
+    "T201",    # allow print statements
+]
 pydocstyle.convention = "google"
 
 
@@ -123,9 +142,9 @@ target-version = "py312"
 [tool.ruff.per-file-ignores]
 # Ignore certain rules in test files
 "tests/**/*.py" = [
-    "S101", # asserts allowed in tests...
-    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
-    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
+    "S101",    # asserts allowed in tests...
+    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
+    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
     "PLR2004", # Magic value used in comparison, ...
 ]
 
@@ -133,10 +152,10 @@ target-version = "py312"
 quote-style = "double"
 
 [tool.djlint]
-profile="jinja"
+profile = "jinja"
 
 [tool.isort]
-profile="black"
+profile = "black"
 
 [tool.pytest.ini_options]
 markers = [
