--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - "User Guide":
       - "Defining multiobjective optimization problems": "howtoguides/problem.md"
       - "Running the API": "howtoguides/api.md"
+      - "How to use the NAUTILUS Navigator method": "howtoguides/NAUTILUS Navigator.md"
   - "Explanation":
       - "The problem format": "explanation/problem_format.md"
       - "Scalarization-based methods": "explanation/scalarization_methods.md"
