Performance improvements to the infix parser.
Regex does now some of the heavy lifting. Improved the runtime of the infix parser by around 62%.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,7 +163,10 @@ profile = "black"
 markers = [
     "slow: mark test as slow",
     "nautilus_navigator: tests related to the NAUTILUS Navigator method.",
+    "performance: tests that are related to performance. Skipped by default.",
+    "infix_parser: tests related to the infix parser.",
 ]
+addopts = "-m 'not performance'"
 
 [build-system]
 requires = ["poetry-core"]
