Progress on the pyomo expression parser/evaluator.
Can now parse MathJSON expression with basic arithmetic operators into valid pyomo expressions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -165,6 +165,7 @@ markers = [
     "nautilus_navigator: tests related to the NAUTILUS Navigator method.",
     "performance: tests that are related to performance. Skipped by default.",
     "infix_parser: tests related to the infix parser.",
+    "pyomo: tests related to pyomo models, their parsing, and evaluation.",
 ]
 addopts = "-m 'not performance'"
 
