Added functionality to handle user bounds in NAUTILUS navigator.
Also updated the API to accept user bounds.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ bcrypt = "^4.1.2"
 nevergrad = "^1.0.1"
 pyomo = "^6.7.0"
 jupyter = "^1.0.0"
+pyarrow = "^15.0.0"
 
 [tool.poetry.extras]
 standard = ["polars"]
