Problem schema and documentation changes.
The EvlauatedSolutions and EvaluatedInfo models have been removed from now. They were not used anywhere and are not really part of defining a problem. A similar model will be useful later on the emo side, probably, but right now, it is just confusing. DiscreteRepresentation does the job better.

Rewrote and restuctred the documentation on the Problem format. Will continue writing on problem parsing and evaluating, solvers, and scalarization later.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,9 +12,9 @@ nav:
       - "How to use the NAUTILUS Navigator method": "howtoguides/NAUTILUS Navigator.md"
   - "Explanation":
       - "The problem format": "explanation/problem_format.md"
-      - "Scalarization-based methods": "explanation/scalarization_methods.md"
-      - "Solving problems": "explanation/solving_problems.md"
-      - "Scalarization functions": "explanation/scalarization_functions.md"
+      - "Parsing and evaluating": "explanation/parsing_and_evaluating.md"
+      - "Scalarization": "explanation/scalarization.md"
+      - "Solvers": "explanation/solvers.md"
 
 theme:
   name: readthedocs
