--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -37,6 +37,7 @@ fonttools==4.47.0 ; python_version >= "3.12" and python_version < "4.0"
 fqdn==1.5.1 ; python_version >= "3.12" and python_version < "4"
 ghp-import==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.12" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+griffe==0.41.1 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 html-tag-names==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 html-void-elements==0.1.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -77,8 +78,14 @@ matplotlib-inline==0.1.6 ; python_version >= "3.12" and python_version < "4.0"
 matplotlib==3.8.2 ; python_version >= "3.12" and python_version < "4.0"
 mergedeep==1.3.4 ; python_version >= "3.12" and python_version < "4.0"
 mistune==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-autorefs==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs-macros-plugin==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-material-extensions==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+mkdocs-material==9.5.12 ; python_version >= "3.12" and python_version < "4.0"
 mkdocs==1.5.3 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings-python==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings==0.24.1 ; python_version >= "3.12" and python_version < "4.0"
+mkdocstrings[python]==0.24.1 ; python_version >= "3.12" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -93,6 +100,7 @@ numba==0.59.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==1.26.3 ; python_version >= "3.12" and python_version < "4.0"
 overrides==7.4.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.12" and python_version < "4.0"
+paginate==0.5.6 ; python_version >= "3.12" and python_version < "4.0"
 pandas==2.1.4 ; python_version >= "3.12" and python_version < "4.0"
 pandocfilters==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 parso==0.8.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -117,6 +125,7 @@ pydantic-core==2.14.6 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.5.3 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.17.2 ; python_version >= "3.12" and python_version < "4.0"
 pygraphviz==1.12 ; python_version >= "3.12" and python_version < "4.0"
+pymdown-extensions==10.7 ; python_version >= "3.12" and python_version < "4.0"
 pyomo==6.7.0 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing[diagrams]==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
