--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,9 +15,11 @@ nav:
       - "Parsing and evaluating": "explanation/parsing_and_evaluating.md"
       - "Scalarization": "explanation/scalarization.md"
       - "Solvers": "explanation/solvers.md"
+  - "API Documentation":
+      - "desdeo-problem": "api/desdeo_problem.md"
 
 theme:
-  name: readthedocs
+  name: material
   nav_style: dark
   highlightjs: true
   hljs_languages:
@@ -31,6 +33,23 @@ plugins:
   - search
   - macros:
       module_name: docs/macros
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            show_source: true
+            show_signature_annotations: true
+            show_type_annotations: true
+            show_root_heading: false
+            separate_signature: true
+            heading_level: 2
+            merge_init_into_class: true
+            show_root_toc_entry: false
+            group_by_category: true
+            show_category_heading: false
+            filters: none
+          docstring_options:
+           ignore_init_summary: true
 
 markdown_extensions:
   - admonition
