--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ extra_javascript:
 
 plugins:
   - search
+  - autorefs
   - macros:
       module_name: docs/macros
   - mkdocstrings:
@@ -40,13 +41,15 @@ plugins:
             show_source: true
             show_signature_annotations: true
             show_type_annotations: true
-            show_root_heading: false
+            show_root_heading: true
             separate_signature: true
             heading_level: 2
             merge_init_into_class: true
             show_root_toc_entry: false
             group_by_category: true
             show_category_heading: false
+            show_symbol_type_heading: true
+            show_symbol_type_doc: true
             filters: none
           docstring_options:
            ignore_init_summary: true
@@ -54,3 +57,6 @@ plugins:
 markdown_extensions:
   - admonition
   - mdx_math
+
+extra_css:
+  - stylesheet/extra.css 
