Documentation related changes.
Fixed and added some docstrings to the problem schema. Wrote the beginning of the section "Parsing and evaluating problems" in the Explanations section of the docs.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ plugins:
         python:
           options:
             show_source: true
+            show_bases: true
             show_signature_annotations: true
             show_type_annotations: true
             show_root_heading: true
