--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ docs_dir: "docs"
 site_dir: "site"
 
 nav:
+  - Home: "index.md"
   - "DESDEO":
       - "About": "home/about.md"
       - "The structure": "home/structure.md"
