--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ markdown_extensions:
   - mdx_math
   - pymdownx.arithmatex:
       generic: true 
+  - footnotes
 
 extra_css:
   - stylesheets/extra.css 
