--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_dir: "site"
 nav:
   - Home: "index.md"
   - "DESDEO":
+      - "DESDEO": "home/index.md"
       - "About": "home/about.md"
       - "The structure": "home/structure.md"
       - "Citing DESDEO": "home/citing.md"
@@ -83,6 +84,11 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true 
   - footnotes
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 extra_css:
   - stylesheets/extra.css 
