--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,9 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.superfences
 
 extra_css:
   - stylesheets/extra.css 
